gh-338 fixed schema issue and spacing issues

--- a/ui/src/main/webapp/css/style.css
+++ b/ui/src/main/webapp/css/style.css
@@ -106,7 +106,3 @@ md-option > div {
     font-size: 14px;
     line-height: 14px;
 }
-
-md-datepicker {
-    display: inline-table;
-}
